<resources>
    <string name="app_name">Farmflesh</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_gcm_reg">GCM Reg</string>
    <string name="action_gcm_gmail_reg">GCM reg</string>
    <string name="action_login">Login</string>
    <string name="signed_out">Signed out</string>
    <string name="my_account">My account</string>

    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="welcome">Welcome to farmflesh- Tutorial</string>
    <string name="next_button">Next(Gmail reg)</string>

    <string name="perm_req_body_header">For Moto Loop to work, it must use:\n\n</string>
    <string name="perm_req_body_footer">Select \"Allow\" on the following screen to grant permission.\n</string>
    <string name="perm_req_sms_header">For family invitation to work, Moto Loop must use:\n\n</string>
    <string name="perm_req_body_location">\t\t\u2022 Location - to show your family\'s location on a map\n\n</string>
    <string name="perm_req_body_contacts">\t\t\u2022 Contacts - to read your Motorola ID account\n\n</string>
    <string name="perm_req_body_calendar">\t\t\u2022 Calendar - to check if a family member is busy\n\n</string>
    <string name="perm_req_body_phone">\t\t\u2022 Phone - to read your SIM number\n\n</string>
    <string name="perm_req_loop_storage">\t\t\u2022 Storage - to keep your family data in sync\n\n</string>
    <string name="perm_req_loop_sms">\t\t\u2022 SMS - To send a link to download Loop\n\n</string>
    <string name="perm_req_loop_sms_verify">\t\t\u2022 SMS - To verify your mobile number\n\n</string>
    <string name="perm_req_title">Permissions required</string>
    <string name="cont">CONTINUE</string>
    <string name="app_info">APP INFO</string>
    <string name="not_now">NOT NOW</string>
    <string name="perm_denied">Moto Loop needs permission to access some things on your device. Select \“Permissions\” in App info to re-enable.</string>
    <string name="welcome_part_two_send_body">With Loop, the devices in\r\nyour home can automatically\r\nadjust based on who\'s there&#8212;or not.</string>
    <string name="welcome_part_one_send_title">You don\'t have to ask</string>
    <string name="welcome_part_two_send_title">Comfort is always on</string>
    <string name="welcome_part_one_send_body">Loop lets you know where your loved ones are&#8212;no need for individual calls or message updates.</string>
    <string name="welcome_title">Welcome to Moto Loop\u2122</string>
    <string name="welcome_getStarted">GET STARTED</string>
    <string name="welcome_msg">Keep your family and home \r\n connected in one place.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_main_activity">Hello blank activity-main</string>
    <string name="title_activity_test">test</string>
    <string name="undo">undo</string>

    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
